# iwmenu

./: CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
locales/: app.yml
src/: app.rs  icons.rs  launcher.rs  lib.rs  macros.rs  main.rs  menu.rs  notification.rs
src/iw/: access_point.rs  adapter.rs  agent.rs  device.rs  known_network.rs  network.rs  station.rs
