[package]
name = "iwmenu"
version = "0.2.0"
edition = "2018"
description = "Launcher-driven Wi-Fi manager for Linux"
authors = ["e-tho"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/e-tho/iwmenu"
repository = "https://github.com/e-tho/iwmenu"

[dependencies]
iwdrs = "0.1"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = { version = "3", features = ["derive"] }
chrono = "0.4"
nix = { version = "0.29", features = ["process", "signal"] }
libc = "0.2"
process-wrap = { version = "8.2", features = ["std"] }
signal-hook = "0.3"
notify-rust = "4"
shlex = "1.3"
regex = "1"
rust-i18n = "3"
sys-locale = "0.3"

[profile.release]
strip = true
lto = true
